# qwen-agent-proxy

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.toml  pyproject.toml
qwen_agent_proxy/: __init__.py  config.py  logging_utils.py  main.py  openai_types.py  orchestrator.py  prompts.py  repair.py  upstream.py
tests/: test_config.py  test_openai_compat.py  test_orchestrator.py  test_repair.py  test_upstream.py
